# django-template

./: .gitignore  README.md  pyproject.toml
django_template/django_template/: settings.py  urls.py
